# MLOpsPipelineOrchestrator

./: README.md  initialize.py
kedrospaceship/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
kedrospaceship/conf/base/: catalog.yml  parameters.yml  parameters_ETL_app.yml  parameters_fine_tunning.yml  parameters_ml_app.yml  parameters_serving_inference.yml
kedrospaceship/conf/local/: mlflow.yml
kedrospaceship/mlruns/0/: meta.yaml
kedrospaceship/mlruns/504444737298682879/: meta.yaml
kedrospaceship/mlruns/504444737298682879/5572ba900ecb4c3986aa3087fc43a6d4/: meta.yaml
kedrospaceship/mlruns/504444737298682879/5572ba900ecb4c3986aa3087fc43a6d4/params/: DATA_PIPELINES  DATA_SPLIT  ETL  INITIALIZE  MODEL
kedrospaceship/mlruns/504444737298682879/5572ba900ecb4c3986aa3087fc43a6d4/tags/: mlflow.log-model.history  mlflow.source.name  project_path  runner  session_id
kedrospaceship/src/kedrospaceship/: __init__.py  __main__.py  inference_serving.py  kedro_funcs.py  mlp_instance.py  pipeline_registry.py  py_funcs.py
kedrospaceship/src/kedrospaceship/mlp_params/data_pipelines/: preprocessing_pipeline_steps.py  sampling_pipeline_steps.py
kedrospaceship/src/kedrospaceship/mlp_params/fine_tunning/: gridsearch_experiments.py  optuna_experiments.py
kedrospaceship/src/kedrospaceship/mlp_params/models/: XGB_model.py
kedrospaceship/src/kedrospaceship/pipelines/ETL_app/: __init__.py  nodes.py  pipeline.py
kedrospaceship/src/kedrospaceship/pipelines/fine_tunning/: __init__.py  nodes.py  pipeline.py
(+27 files in other folders)
